2013-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm (get_device): Return the
	  Amanda::Changer::Error on error.

2013-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (s3_make_bucket): Init add_create to FALSE.

2013-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Handle DURABLE_REDUCED_AVAILABILITY for OAUTH2.
	* man/xml-source/amanda-devices.7.xml: Document
	  DURABLE_REDUCED_AVAILABILITY for google storage.

2013-05-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: untaint input variable.

2013-05-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add a VERBOSE property.
	* man/xml-source/ampgsql.8.xml: Document VERBOSE property.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/ps.m4: use one AC_MSG_RESULT.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/element-glue.c: Add debugging statement.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Do not confess if device not available.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/ampgsql.8.xml: Add disklist example.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl: Remove perl warning.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Check return value of system calls.
	* oldrecover-src/extract_list.c: Check return value of system calls.
	* oldrecover-src/amrecover.c: Call dbrename after config is set.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* config/snippet: Add directory.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* gnulib/*, config/gnulib/*: upgrade gnulib to
	  3fe906e98202a591a6a14010aec1538adfd821b6.

2013-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Add that both flush-threshold-dumped